# rust-scheduler

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2021-05-08-230157_create_events/: down.sql  up.sql
migrations/2021-05-08-231057_create_invitations/: down.sql  up.sql
migrations/2021-05-08-231154_create_options/: down.sql  up.sql
src/: dtos.rs  main.rs  models.rs  schema.rs
src/forms/: proposed_event.rs
templates/: base.html.hbs  create_event.html.hbs
