[package]
name = "scheduler"
version = "0.1.0"
authors = ["Shahne Rodgers <shahnerodgers@gmail.com>", "Ambrose Fok <leftrighteous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["mysql"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_mysql_pool", "handlebars_templates"]
